Finalization of the EPUB file

--- a/ebook/ebook.html
+++ b/ebook/ebook.html
@@ -1,13 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="fr">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="create-date" content="2013-09-01"/>
-    <link rel="stylesheet" href="lyx.css" type="text/css" media="all"/>
+    <meta name="create-date" content="2013-09-02"/>
+    <link rel="stylesheet" href="main.css" type="text/css" media="all"/>
     <title>3000 kilomètres en diagonale</title>
 </head>
-<body xml:lang="fr">
+<body lang="fr">
+
+<p class="center">
+© 2013 – Marie Courtel et Mathieu Poisbeau<br/>
+Licence CC0<br/>
+<a href="http://creativecommons.org/publicdomain/zero/1.0/deed.fr">
+    http://creativecommons.org/publicdomain/zero/1.0/deed.fr
+</a><br/>
+</p>
+
+<p class="center break-after">
+Publié en septembre 2013, par :<br/><br/>
+<em>Atramenta</em><br/>
+Näsijärvenkatu 3 B 50, 33210 Tampere, FINLANDE<br/>
+<a href="http://www.atramenta.net">www.atramenta.net</a>
+</p>
+
+<h2 class="author">
+    MARIE COURTEL
+    <br/>
+    MATHIEU POISBEAU
+</h2>
+
+<h1 class="title">
+    3000 KILOMÈTRES
+    <br/>
+    EN DIAGONALE
+</h1>
+
+<div class="center break-after">
+    <br/><br/><br/>
+    Publié sous licence CC0
+    <br/>
+    <img alt="" src="pictures/CC-Zero-badge.png" style="width: 122px; height: 43px;">
+</div>
 
 <h2 id="toc-Section--1">
     Avant-propos<sup><a id="parent-footnote-A" href="#footnote-A" class="SupFootMarker">[A]</a></sup>
@@ -35,14 +69,13 @@
 
 <!-- Thanks to -->
 <div class="right break-before">
-    <br/>
-    <br/>
+    <br/><br/><br/>
     <em>À Francis, avec toute notre amitié</em>
-    <br/>
+    <br/><br/>
 </div>
 
 <div class="right break-after">
-    <br/>
+    <br/><br/>
     <em>À Monique, avec nos plus sincères remerciements</em>
 </div>
 <!-- END_Thanks to -->
@@ -65,12 +98,12 @@
     <em>Marie et Mathieu</em>
 </p>
 
-<h1 class="Part break-before" id="toc-Part-I">
+<h1 class="Part" id="toc-Part-I">
     Partie I.<br/>Descente de Loire
 </h1>
 
 <div class="center">
-    <img alt="" src="Maps/Map_Loire.png" style="max-width: 1700px; max-height: 1700px;"/>
+    <img alt="" src="Maps/Map_Loire.png" style="max-width: 1700px; height: auto; max-height: 1700px;"/>
 </div>
 
 
@@ -298,12 +331,12 @@ Récit d’Amboise à Lavau-sur-Loire&#160;<br/>
     Ce jour-là, la compagnie «&#160;Royal&#160;de&#160;Luxe&#160;» préparait, à l’abri des regards terrestres, son nouveau spectacle de rue, avec ses fameux géants.
 </div>
 
-<h1 class="Part break-before" id="toc-Part-II">
+<h1 class="Part" id="toc-Part-II">
     Partie II.<br/>Grande marche
 </h1>
 
 <div class="center">
-    <img alt="" src="Maps/Map_LongWalk.png" style="max-width: 1700px; max-height: 1700px;"/>
+    <img alt="" src="Maps/Map_LongWalk.png" style="max-width: 1700px; height: auto; max-height: 1700px;"/>
 </div>
 
 <h2 id="toc-Section-11">
@@ -755,11 +788,13 @@ Les débuts d’un long voyage
 <p>Le lendemain, Francis nous retrouve à quatre pas de chez lui, à la fois sidéré, grognon et joyeux. Durant quatre jours, il nous reçoit comme des princes.</p>
 <p>L’ultime journée à Nice, en haut du parc aux pins parasols, nous observons une dernière fois la Méditerranée. Là, en scrutant le va-et-vient des ferries, nos corps et nos âmes se séparent. Nos corps, eux, retournent en pays nantais par un long train de nuit, dans l’incertitude du lendemain. Nos âmes, elles, se plongent dans l’horizon bleu de la mer, vers le large et les côtes africaines, rêvant à un nouveau long voyage...</p>
 
-<h1 class="Part break-before" id="toc-Part-III">
-    Partie III. Au-delà du voyage
+<h1 class="Part" id="toc-Part-III">
+    Partie III.
+    <br/>
+    Au-delà du voyage
 </h1>
 
-<h2 id="toc-Section-30">
+<h2 id="toc-Section-30" class="break-before">
 Je voyage dans les nuages
 </h2>
 <p>
@@ -807,7 +842,7 @@ Vagabondages hygiéniques
 <p>Il y eut quelques grandes rivières sillonnant le territoire&#160;: la Loire, la Vienne, l’Indre, la Creuse et le Tarn. Au gré de leurs lits longs, larges et profonds, nous pouvions y nager et y délier nos corps, tandis que leurs flots et leurs vaguelettes nous faisaient rêvasser. Nous ont également accueillis&#160;: des ruisseaux sans nom et quelques sources jaillissant de terre. Souvent éloignés de toute présence humaine, c’est sans complexe que &#8211;&#160;nus comme des vers&#160;&#8211; nous y avons fait nos plus grosses toilettes. Il y eut aussi &#8211;&#160;surtout pour le bien-être du corps&#160;&#8211; un grand lac (celui de Vassivière) et une jolie mer (la Méditerranée).</p>
 <p>Pour finir, nous sommes «&#160;passés à la douche&#160;» à cinq reprises. Accueillis chez des amis, des douches chaudes et formelles nous ont été offertes. Rien de bien palpitant, cependant, à voir sortir l’eau d’un robinet. Mais n’oublions pas les fois où la toilette fut sommaire. Grâce à notre outre d’eau de six litres, nous pouvions laver nos goules, nos pieds et nos dents bien plus régulièrement. Un fait «&#160;amusant&#160;» de ce voyage&#160;: plus l’eau tombait du ciel, plus notre hygiène était mauvaise. Aucune envie, en effet, d’ajouter de l’eau froide à la froide humidité&#160;!</p>
 <p>Ce voyage, nous l’avons vécu au plus proche de dame Nature. Nous y avons eu une hygiène nécessaire et suffisante à une bonne santé physique et morale. Notre manque relatif de propreté ne nous a pas gêné, excepté lors de nos retours en société. Parfois, pendant de longs moments, l’eau était notre amie intime&#160;; et nous aimions jouer ensemble... À d’autres, elle et nous étions brouillés&#160;; de chagrin, nous nous soûlions alors de poussière, qui recouvrait nos corps. Mais les rabibochages en étaient que plus plaisants, plus intenses, plus singuliers.</p>
-<p>Pour finir, illustrons cette rétrospective hygiénique par deux moments cocasses.<br/></p>
+<p>Pour finir, illustrons cette rétrospective hygiénique par deux moments cocasses.<br/><br/><br/></p>
 
 <h4 id="toc-Subsubection--1">
 Toilette naturiste interrompue
@@ -818,7 +853,7 @@ Toilette naturiste interrompue
 
 <p>Peu après Orléans, le kayak allait bon train. Mais à l’heure du midi, tandis que nous mettions pieds à terre pour le tirer dans quelques eaux peu profondes et bouillonnantes, germa en nous l’idée de nous laver&#160;: nus, ici et maintenant. Encore novices dans l’art du naturisme, c’est un peu empotés que nous nous toilettâmes le cul et le reste, dans l’eau un peu froide.</p>
 <p>La Loire, à cet endroit, était large et ouverte. Avec seulement la peau sur les os, un pain de savon dans une main et un gant de toilette &#8211;&#160;rouge écarlate&#160;&#8211; enfourché sur l’autre, nous ne nous sentions pas du tout à l’aise et avions les yeux qui furetaient anxieusement. Ces yeux fureteurs furent utiles, car un couple de randonneurs quinquagénaires s’arrêta en bord de rive, pour nous mater ostensiblement. Vicelards ou amis du naturel&#160;?</p>
-<p>M’accroupissant à la hâte derrière notre long kayak, je lançai à Mathieu&#160;: «&#160;Y’a des gens&#160;!&#160;» Ni une ni deux, il s’accroupit avec autant de célérité, cachant son mètre quasi quatre-vingt-dix dans... 30&#160;centimètres d’eau. Après quelques secondes ainsi, prenant pleinement conscience de nos postures ridicules, nous nous détendîmes, les saluâmes et nous remîmes à nos affaires.<br/></p>
+<p>M’accroupissant à la hâte derrière notre long kayak, je lançai à Mathieu&#160;: «&#160;Y’a des gens&#160;!&#160;» Ni une ni deux, il s’accroupit avec autant de célérité, cachant son mètre quasi quatre-vingt-dix dans... 30&#160;centimètres d’eau. Après quelques secondes ainsi, prenant pleinement conscience de nos postures ridicules, nous nous détendîmes, les saluâmes et nous remîmes à nos affaires.<br/><br/><br/></p>
 
 <h4 id="toc-Subsubection--2">
 Toilette champêtre
@@ -875,20 +910,15 @@ Que non&#160;! Fromage, saucisson, sardines à l’huile, bonbons et biscuits tr
 <p>Pour résumer&#160;: au fil des jours et des kilomètres, nous travaillions à rendre notre alimentation toujours plus simple, moins transformée et moins onéreuse. À quelques reprises, nous avons même fabriqué nos propres galettes de pain (une fois au gaz&#160;; le reste au feu de bois). Les repas ont tenu, de bout en bout de nos deux périples, une place d’importance&#160;: celle du lien, du moral, du réconfort.</p>
 <p>Terminons ce texte &#8211;&#160;qui ne vous aura, probablement, pas mis l’eau à la bouche&#160;&#8211; par quelques-uns de nos menus typiques.</p>
 
-<div>
-<br/>
-<strong>Petits déjeuners</strong>
+<h4>Petits déjeuners</h4>
 <ul>
     <li>thé, café soluble, lait (en poudre ou frais selon arrivage)&#160;;</li>
     <li>biscuits sucrés (nature ou au chocolat), pain d’épice, pain avec du chocolat pâtissier. </li>
 </ul>
-Quel plaisir, par un matin froid, de se chauffer&#160;: les mains sur un godet de thé chaud&#160;; le visage aux premiers rayons du soleil.
-<br/>
-</div>
+<p>Quel plaisir, par un matin froid, de se chauffer&#160;: les mains sur un godet de thé chaud&#160;; le visage aux premiers rayons du soleil.</p>
 
-<div>
-<br/>
-<strong>Déjeuners</strong><ul>
+<h4>Déjeuners</h4>
+<ul>
 <li>
 pain + sardines à l’huile ou saucisson, pour les féculents et protéines&#160;;
 </li>
@@ -902,13 +932,10 @@ carottes et pommes, pour les vitamines&#160;;
 chocolat et biscuits, pour le sucre.
 </li>
 </ul>
-Quelle gourmandise d’éponger, avec un reste de pain, le rab d’huile d’olive.
-<br/>
-</div>
+<p>Quelle gourmandise d’éponger, avec un reste de pain, le rab d’huile d’olive.</p>
 
-<div>
-<br/>
-<strong>Dîners</strong><ul>
+<h4>Dîners</h4>
+<ul>
 <li>
 cacahuètes, pour l’apéro&#160;;
 </li>
@@ -927,10 +954,8 @@ fromage&#160;;
 <li>
 pommes et chocolat, en dessert.
 </li>
-
 </ul>
-Et un gros dodo, le ventre plein, emmitouflés dans nos duvets d’amoureux.
-</div>
+<p>Et un gros dodo, le ventre plein, emmitouflés dans nos duvets d’amoureux.</p>
 
 <h2 id="toc-Section-33">
 Ça s’randonne la France&#160;!
@@ -1010,120 +1035,180 @@ Les retrouvailles
 <p>Sans gamberger, Kim se relève, fait trois tours sur elle-même, puis s’élance vers lui les bras grands ouverts. Au bout de sa course, elle enlace avec force les jambes de ce papa, qui se baisse, la soulève et la fait tournoyer. La robe-tablier de Kim virevolte et de petites larmes coulent sur ses joues rougies.</p>
 <p>Après mille câlins, ils s’en vont, main dans la main. Kim suit son papa, sans voir où elle va. Elle parle et elle parle, racontant chaque détail de sa folle aventure. Lui la regarde tendrement et sourit, se disant que sa petite Kim a bien grandit.</p>
 
-<h1 class="Part break-before" id="toc-Part-IV">
-    Partie IV. Annexes
+<h1 class="Part" id="toc-Part-IV">
+    Partie IV.<br/>Annexes
 </h1>
 
-<h2 id="toc-Section-35">
+<h2 id="toc-Section-35" class="break-before">
     Cahier de photos
 </h2>
 
 <!-- BEGIN of pictures -->
-<div class="center">
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2263.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Sucs ardéchois sous le soleil d'un printemps précoce
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2285.jpg" style="max-width: 900px; height: auto; max-height: 1200px;"/>
     <br/>
     Équilibre incertain
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2269.jpg" style="max-width: 900px; height: auto; max-height: 1200px;"/>
     <br/>
     Surprenante source de Loire
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2589.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2308.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Avant de se jeter à l'eau...
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2322.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Premier portage. Ça roule !
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2414.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Mur de béton d'une rivière sauvage
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2426.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Crépuscule ligérien
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2556.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2466.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2489.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2735.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2714.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/IMG_2650.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/down-loire/little/P5223609.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Sel sur mes lèvres et vagues m'aspergeant, bel avant-goût de l'océan
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_2831.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3036.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Saison des blés
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_2994.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     L'ami Francis
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3086.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Étang de Brenne
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3294.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Attention à l'indigestion
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3361.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3191.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Lande d'Augerolles
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3373.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Petit-déjeuner au lit
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3359.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3427.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Se délecter d'une nature haute et colorée
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3437.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     S'accrocher à ses rêves
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3530.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Plateau de Suech
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3402.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Profiter des rencontres
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3483.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Lubéron
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_3533.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     On dirait le Sud...
-    <br/>
+</p>
+
+<p class="center">
     <img alt="" src="pictures/long-walk/little/IMG_2981.jpg" style="max-width: 1200px; height: auto; max-height: 900px;"/>
     <br/>
     Voleter à deux, d'épi en épi
-</div>
+</p>
 <!-- END of pictures -->
 
 
