Last corrections of EPUB

--- a/ebook/ebook.html
+++ b/ebook/ebook.html
@@ -154,7 +154,7 @@ Le mont Gerbier-de-Jonc
 Baptême ligérien
 </h2>
 <div class="context">
-Récit de Retournac à Digoin&#160;<br/>
+Récit de Retournac à Digoin<br/>
 13 au 27 avril&#160;; 220 km
 </div>
 
@@ -975,8 +975,7 @@ Perdue en forêt
 </h2>
 <div class="context">
 Conte pour enfants, écrit par Mathieu.<br/>
-Inspiré par les forêts de Creuse,<br/>
-ce texte prit forme sur les bords du lac de Vassivière.
+Inspiré par les forêts de Creuse, ce texte prit forme sur les bords du lac de Vassivière.
 </div>
 
 <h4 id="toc-Subsubection--3">
